--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ padding: 3rem;
     padding: 50px 0;
 }
 
+/* Creating line */
 
 #timeline ul li{
     position: relative;
@@ -43,4 +44,64 @@ padding: 3rem;
     margin: auto;
     background-color: white;
     padding-top: 4rem;
+}
+
+
+/* creating boxes */
+
+#timeline ul li > div{
+    position: relative;
+    bottom: 0;
+    width: 400px;
+    background-color: var(--secondary-color);
+    padding:1rem;
+    transition: all 0.5s ease-in-out;
+}
+
+
+#timeline ul li:nth-child(odd) div{
+    left: 40px;
+}
+
+#timeline ul li:nth-child(even) div{
+    left:-434px;
+}
+
+
+#timeline ul li::after{
+    content: "";
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    background-color: var(--secondary-color);
+    border-radius: 50%;
+    left: 50%;
+    bottom: 0;
+    transform: translateX(-50%);
+    transition: background 0.5s ease-in-out;
+}
+
+
+
+/* Creating arrow for box */
+
+#timeline div::before{
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 0;
+    bottom: 5px;
+    border-style: solid;
+}
+
+#timeline ul li:nth-child(odd) div::before{
+    left: -15px;
+    border-width: 8px 16px 8px 0;
+    border-color: transparent var(--secondary-color) transparent transparent;
+}
+
+#timeline ul li:nth-child(even) div::before{
+right: -15px;
+border-width: 8px 0 8px 16px;
+    border-color: transparent  transparent transparent var(--secondary-color);
 }
